# Highlights

./: .gitignore  CMakeLists.txt  GfeSDKWrapper.cpp  GfeSDKWrapper.hpp  README.md  library.cpp  library.h
highlights/: pom.xml
highlights/src/main/java/dev/fxe/highlights/: Highlight.java  Highlights.java  NVGSDK_HighlightSignificance.java
include/gfesdk/: config.h  gfe3_product_version.h
java/dev/fxe/highlights/: LocalizedPair.java  NVGSDK_HighlightType.java
sample/: pom.xml
sample/src/dev/fxe/sample/: Main.java
